    are immutable data structures. We removed this in favor of annotating modules with
    parameters. The abstract classes for Stackables were also simplified. Now we only have
    `Module` and `ModuleN` variants which are more convenient for most definitions.
    Since this is an advanced API, it should not impact standard usage of finagle.

6.22.0
~~~~~~

Breaking API Changes
--------------------

  * finagle-core: Removed unused `com.twitter.finagle.service.ProxyService`. It wasn't
    sufficiently general to be used outside of finagle, and was no longer used
    in finagle.

New Features
------------

  * finagle-core: BroadcastStatsReceiver, introduce specialized implementation
  * finagle-core: Introduce gauges in SummarizingStatsReceiver
  * finagle-core: Introduce Transport#copyToWriter
  * finagle-core: Make base Dtab used in BindingFactory a Stack.Param
  * finagle-core: Proper decay in experimental ewma load metric
  * finagle-core: Simplify Stack{Client, Server} and unify around them


Runtime Behavior Changes
------------------------

  * finagle-core: Add support for non-URLClassloaders to LoadService
  * finagle-core: clear locals before entering server dispatch loop
  * finagle-core: Defer DNS Resolution in InetResolver to FuturePool
  * finagle-core: for paths starting with /#/, skip rewrites where prefix is /
  * finagle-core: include name resolution in tracing request span
  * finagle-core: Properly wrap some IOException into ConnectionFailedException
  * finagle-core: Scope InetResolver's stats properly
  * finagle-http: Send "Connection: close" header while dispatcher is closing
  * finagle-http: Set content length header when appropriate
  * finagle-memcached: Use interruptible future for the client request readiness
  * finagle-stats: Add content-type response header to JsonExporter
  * finagle-thrift: Add back connection_preparation_latency stat in Thrift
  * finagle-thriftmux: Record protocol as a gauge rather than a counter

Documentation